Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp
@@ -451,8 +451,12 @@ const AXCoreObject::AccessibilityChildrenVector& AXIsolatedObject::children(bool
 #elif USE(ATSPI)
     ASSERT(!isMainThread());
 #endif
+    RefPtr<AXIsolatedObject> protectedThis;
     if (updateChildrenIfNeeded) {
+        // updateBackingStore can delete `this`, so protect it until the end of this function.
+        protectedThis = this;
         updateBackingStore();
+
         m_children.clear();
         m_children.reserveInitialCapacity(m_childrenIDs.size());
         for (const auto& childID : m_childrenIDs) {
@@ -961,6 +965,8 @@ void AXIsolatedObject::updateBackingStore()
     // This method can be called on either the main or the AX threads.
     if (auto tree = this->tree())
         tree->applyPendingChanges();
+    // AXIsolatedTree::applyPendingChanges can cause this object and / or the AXIsolatedTree to be destroyed.
+    // Make sure to protect `this` with a Ref before adding more logic to this function.
 }
 
 std::optional<SimpleRange> AXIsolatedObject::visibleCharacterRange() const
